frontend/modules/planner/planner.component.css
/*
 * File: planner.component.css
 * Author: Adam Vcelar (xvcelaa00@stud.fit.vut.cz)
 *
 * CSS styles file for the planner component.
 */

.cursor-image {
  position: fixed;     
  top: 0;
  left: 0;
  pointer-events: none;
}

.side-btn-div {
  width: 100%;
  display: flex;
  justify-content: center;
  padding: 0;
}

.side-control-modules {
  width: 100%;
}

.btn-side-menu {
  width: 100%;
}

.setting-img {
  width: 25px;
}

.setting-img-mobile {
  width: 13px;
}

.walk-distance-input-div {
  display: flex;
  gap: 10px;
  align-items: center;
}

.side-control-checkbox-list {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.checkbox-label-pair {
  display: flex;
  gap: 8px;
}

.main-components-wrapper {
  position: absolute;
  right: 0;
  z-index: 999;
  width: 370px;
}

